--- a/smartapp-eindopdracht/package.json
+++ b/smartapp-eindopdracht/package.json
@@ -18,18 +18,21 @@
     "expo-app-loading": "~1.3.0",
     "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
+    "expo-system-ui": "~1.1.0",
+    "native-base": "^3.3.10",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-safe-area-context": "3.3.2",
-    "react-native-svg": "^12.3.0",
-    "react-native-web": "0.17.1",
-    "expo-system-ui": "~1.1.0"
+    "react-native-star-rating": "^1.1.0",
+    "react-native-svg": "12.1.1",
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/react-native-star-rating": "^1.1.2",
     "typescript": "~4.3.5"
   },
   "private": true
