--- a/smartapp-eindopdracht/package.json
+++ b/smartapp-eindopdracht/package.json
@@ -31,6 +31,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-star-rating": "^1.1.0",
     "react-native-svg": "12.1.1",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1"
   },
