--- a/smartapp-eindopdracht/package.json
+++ b/smartapp-eindopdracht/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo-google-fonts/quicksand": "^0.2.2",
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-community/slider": "^4.1.12",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/material-top-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.8",
