--- a/smartapp-eindopdracht/package.json
+++ b/smartapp-eindopdracht/package.json
@@ -23,10 +23,12 @@
     "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
     "expo-system-ui": "~1.1.0",
+    "lodash.filter": "^4.6.0",
     "native-base": "^3.3.10",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-image-gallery": "^2.1.5",
     "react-native-pager-view": "5.4.9",
     "react-native-safe-area-context": "3.3.2",
