--- a/smartapp-eindopdracht/package.json
+++ b/smartapp-eindopdracht/package.json
@@ -24,10 +24,12 @@
     "expo-status-bar": "~1.2.0",
     "expo-system-ui": "~1.1.0",
     "lodash.filter": "^4.6.0",
+    "moment": "^2.29.3",
     "native-base": "^3.3.10",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-calendar-picker": "^7.1.2",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-image-gallery": "^2.1.5",
     "react-native-pager-view": "5.4.9",
@@ -42,6 +44,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/react-native-calendar-picker": "^7.0.2",
     "@types/react-native-image-gallery": "^2.1.1",
     "@types/react-native-star-rating": "^1.1.2",
     "typescript": "~4.3.5"
