--- a/smartapp-eindopdracht/package.json
+++ b/smartapp-eindopdracht/package.json
@@ -30,6 +30,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-calendar-picker": "^7.1.2",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-image-gallery": "^2.1.5",
     "react-native-pager-view": "5.4.9",
