--- a/smartapp-eindopdracht/package.json
+++ b/smartapp-eindopdracht/package.json
@@ -39,7 +39,8 @@
     "react-native-svg": "12.1.1",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-tab-view": "^3.1.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "expo-haptics": "~11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
