--- a/smartapp-eindopdracht/package.json
+++ b/smartapp-eindopdracht/package.json
@@ -20,7 +20,10 @@
     "@react-navigation/stack": "^6.2.1",
     "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
+    "expo-asset": "~8.4.6",
+    "expo-file-system": "~13.1.4",
     "expo-font": "~10.0.4",
+    "expo-haptics": "~11.1.0",
     "expo-status-bar": "~1.2.0",
     "expo-system-ui": "~1.1.0",
     "lodash.filter": "^4.6.0",
@@ -35,12 +38,14 @@
     "react-native-image-gallery": "^2.1.5",
     "react-native-pager-view": "5.4.9",
     "react-native-safe-area-context": "3.3.2",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-star-rating": "^1.1.0",
     "react-native-svg": "12.1.1",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1",
-    "expo-haptics": "~11.1.0"
+    "sqlite": "^4.1.1",
+    "expo-sqlite": "~10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -48,6 +53,7 @@
     "@types/react-native": "~0.64.12",
     "@types/react-native-calendar-picker": "^7.0.2",
     "@types/react-native-image-gallery": "^2.1.1",
+    "@types/react-native-sqlite-storage": "^5.0.2",
     "@types/react-native-star-rating": "^1.1.2",
     "typescript": "~4.3.5"
   },
