--- a/smartapp-eindopdracht/package.json
+++ b/smartapp-eindopdracht/package.json
@@ -1,62 +1,64 @@
 {
-	"name": "smartapp-eindopdracht",
-	"version": "1.0.0",
-	"main": "node_modules/expo/AppEntry.js",
-	"scripts": {
-		"start": "expo start",
-		"android": "expo start --android",
-		"ios": "expo start --ios",
-		"web": "expo start --web",
-		"eject": "expo eject"
-	},
-	"dependencies": {
-		"@expo-google-fonts/quicksand": "^0.2.2",
-		"@expo/vector-icons": "^12.0.0",
-		"@react-native-community/slider": "^4.1.12",
-		"@react-navigation/bottom-tabs": "^6.2.0",
-		"@react-navigation/material-top-tabs": "^6.2.1",
-		"@react-navigation/native": "^6.0.8",
-		"@react-navigation/native-stack": "^6.6.1",
-		"@react-navigation/stack": "^6.2.1",
-		"expo": "~44.0.0",
-		"expo-app-loading": "~1.3.0",
-		"expo-asset": "~8.4.6",
-		"expo-file-system": "~13.1.4",
-		"expo-font": "~10.0.4",
-		"expo-haptics": "~11.1.0",
-		"expo-sqlite": "~10.1.0",
-		"expo-status-bar": "~1.2.0",
-		"expo-system-ui": "~1.1.0",
-		"lodash.filter": "^4.6.0",
-		"moment": "^2.29.3",
-		"native-base": "^3.3.10",
-		"react": "17.0.1",
-		"react-dom": "17.0.1",
-		"react-native": "0.64.3",
-		"react-native-calendar-picker": "^7.1.2",
-		"react-native-gifted-chat": "^0.16.3",
-		"react-native-google-places-autocomplete": "^2.4.1",
-		"react-native-image-gallery": "^2.1.5",
-		"react-native-pager-view": "5.4.9",
-		"react-native-safe-area-context": "3.3.2",
-		"react-native-sqlite-storage": "^6.0.1",
-		"react-native-star-rating": "^1.1.0",
-		"react-native-svg": "12.1.1",
-		"react-native-swipe-list-view": "^3.2.9",
-		"react-native-tab-view": "^3.1.1",
-		"react-native-web": "0.17.1",
-		"sqlite": "^4.1.1",
-		"firebase": "8.2.3"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.12.9",
-		"@types/react": "~17.0.21",
-		"@types/react-native": "~0.64.12",
-		"@types/react-native-calendar-picker": "^7.0.2",
-		"@types/react-native-image-gallery": "^2.1.1",
-		"@types/react-native-sqlite-storage": "^5.0.2",
-		"@types/react-native-star-rating": "^1.1.2",
-		"typescript": "~4.3.5"
-	},
-	"private": true
+  "name": "smartapp-eindopdracht",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject"
+  },
+  "dependencies": {
+    "@expo-google-fonts/quicksand": "^0.2.2",
+    "@expo/vector-icons": "^12.0.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/slider": "^4.1.12",
+    "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/material-top-tabs": "^6.2.1",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.6.1",
+    "@react-navigation/stack": "^6.2.1",
+    "expo": "~44.0.0",
+    "expo-app-loading": "~1.3.0",
+    "expo-asset": "~8.4.6",
+    "expo-file-system": "~13.1.4",
+    "expo-font": "~10.0.4",
+    "expo-haptics": "~11.1.0",
+    "expo-sqlite": "~10.1.0",
+    "expo-status-bar": "~1.2.0",
+    "expo-system-ui": "~1.1.0",
+    "firebase": "8.2.3",
+    "lodash.filter": "^4.6.0",
+    "moment": "^2.29.3",
+    "native-base": "^3.3.10",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
+    "react-native-calendar-picker": "^7.1.2",
+    "react-native-gifted-chat": "^0.16.3",
+    "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-image-gallery": "^2.1.5",
+    "react-native-pager-view": "5.4.9",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-sqlite-storage": "^6.0.1",
+    "react-native-star-rating": "^1.1.0",
+    "react-native-svg": "12.1.1",
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-native-tab-view": "^3.1.1",
+    "react-native-web": "0.17.1",
+    "react-navigation-stack": "^2.10.4",
+    "sqlite": "^4.1.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.9",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.64.12",
+    "@types/react-native-calendar-picker": "^7.0.2",
+    "@types/react-native-image-gallery": "^2.1.1",
+    "@types/react-native-sqlite-storage": "^5.0.2",
+    "@types/react-native-star-rating": "^1.1.2",
+    "typescript": "~4.3.5"
+  },
+  "private": true
 }
