--- a/smartapp-eindopdracht/package.json
+++ b/smartapp-eindopdracht/package.json
@@ -48,7 +48,8 @@
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1",
     "react-navigation-stack": "^2.10.4",
-    "sqlite": "^4.1.1"
+    "sqlite": "^4.1.1",
+    "expo-sms": "~10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
